# wasi-ms-mysql

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  orders.json  update_order.json
client/js/: app.js
src/: main.rs
